tests/integration/fixtures/laugh/error/부모_없는_클래스에서_부모_사용.laugh
클래스 Robot {
    move() { 부모.move(); }
}

변수 r = Robot();
r.move();
